# baicai_webui

./: .cursorrules  .gitignore  IMPLEMENTATION_SUMMARY.md  OBSIDIAN_FORMAT_SUPPORT.md  Readme.md  build_self_contained.py  pyproject.toml  run.py  test_obsidian_functions.py
baicai_webui/: app.py  cli.py  utils.py
baicai_webui/components/: base_page.py  button_graph.py  image_viewer.py  llm_settings.py  right_sidebar.py  stepper.py
baicai_webui/components/chat/: __init__.py  ai_assistant.py  ai_tutor.py
baicai_webui/components/model/: __init__.py  data_upload.py  draw.py  graph_executor.py  model_config_form.py  model_config_page.py  model_settings.py  result_display.py  tabular_shap.py  training.py
baicai_webui/components/tutor/: __init__.py  book_chapters.py  multi_choice_questions.py  survey.py  text_selection.py
baicai_webui/pages/: book.py  collab.py  home.py  llm_setting.py  ml.py  nlp.py  quiz.py  try.py  vision.py
tests/: conftest.py  test_book_utils.py  test_obsidian_functions.py
tests/components/: test_base_page.py  test_button_graph.py  test_image_viewer.py  test_llm_settings.py  test_stepper.py
tests/pages/: test_home.py  test_ml.py  test_quiz.py  test_vision.py
tests/utils/: test_book_utils.py  test_obsidian_functions.py
